testing/tests/ui/loop_cycle_wrong_argument_count.stderr
error: loop.cycle(…) expects exactly one argument
 --> tests/ui/loop_cycle_wrong_argument_count.rs:5:14
  |
5 |     source = r#"{% for v in values %}{{ loop.cycle("r", "g", "b") }}{{ v }},{% endfor %}"#,
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
